--- a/static/index.html
+++ b/static/index.html
@@ -5,17 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<title>Svelte Template</title>
+		<title>Boilerplate svelte</title>
 		<link rel="icon" type="image/png" href="./favicon.png" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="./main.css" />
+		<link rel="stylesheet" href="./scripts/bundle.css" />
+		<script type="module" src="./scripts/widget.js" id="boilerplate_svelte_js"></script>
 	</head>
-	<body>
-		<script type="module"
-			id="widget_svelte_app"
-			src="./scripts/widget.js"
-			data-target = "target_svelte_app"
-			data-namespace="svelte_app"
-		></script>
-		<div id="target_svelte_app"></div>
-	</body>
+	<body></body>
 </html>
