--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<title>Boilerplate svelte</title>
+		<title>Boilerplate Svelte</title>
 		<link rel="icon" type="image/png" href="./favicon.png" />
 		<link rel="stylesheet" href="./scripts/bundle.css" />
 		<script type="module" src="./scripts/widget.js" id="boilerplate_svelte_js"></script>
