--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,11 @@
 		<title>Boilerplate Svelte</title>
 		<link rel="icon" type="image/png" href="./favicon.png" />
 		<link rel="stylesheet" href="./scripts/bundle.css" />
-		<script type="module" src="./scripts/widget.js" id="boilerplate_svelte_js"></script>
+		<script
+			type="module"
+			src="./scripts/widget.js?TARGET_JS=boilerplate_svelte_js"
+			id="boilerplate_svelte_js"
+		></script>
 	</head>
 	<body></body>
 </html>
