--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Boilerplate Svelte using Vite for development</title>
 		<link rel="icon" type="image/png" href="/favicon.ico" />
-		<script type="module" src="/src/main.js"></script>
+		<script
+			type="module"
+			src="/src/main.js?TARGET_JS=boilerplate_svelte_js"
+			id="boilerplate_svelte_js"
+		></script>
 	</head>
 	<body></body>
 </html>
