--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR" dir="ltr">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Boilerplate Svelte using Vite for development" />
+		<meta name="theme-color" content="#878787" />
 		<title>Boilerplate Svelte using Vite for development</title>
-		<link rel="icon" type="image/png" href="/favicon.ico" />
+		<link rel="icon" href="favicon/favicon.ico" type="image/x-icon" sizes="any">
+		<link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
+		<link rel="manifest" href="manifest.json" />
 		<script
 			type="module"
-			src="/src/main.js?TARGET_JS=boilerplate_svelte_js"
-			id="boilerplate_svelte_js"
+			id="app_svelte_js"
+			src="/src/main.js?TARGET_JS=app_svelte_js"
 		></script>
 	</head>
 	<body></body>
