--- a/static/index.html
+++ b/static/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR" dir="ltr">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Boilerplate Svelte</title>
-		<link rel="icon" type="image/png" href="./favicon.png" />
-		<script type="module">
-			const link = globalThis.document.createElement('link')
-			link.rel = 'stylesheet'
-			link.type = 'text/css'
-			link.href = `./scripts/main.css?noCache=${Math.random()}`
-			link.media = 'all'
-
-			const script = globalThis.document.createElement('script')
-			script.id = 'boilerplate_svelte_js'
-			script.type = 'module'
-			script.src = `./scripts/main.js?TARGET_JS=boilerplate_svelte_js&noCache=${Math.random()}`
-
-			globalThis.document.head.append(link)
-			globalThis.document.head.append(script)
-		</script>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Boilerplate Svelte using Vite for development" />
+		<meta name="theme-color" content="#878787">
+		<title>Boilerplate Svelte using Vite for development</title>
+		<link rel="icon" href="favicon/favicon.ico" type="image/x-icon" sizes="any">
+		<link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
+		<link rel="manifest" href="manifest.json">
+		<link rel="preconnect" href="https://unpkg.com" crossorigin>
+		<script
+			type="module"
+			id="app_svelte_widget"
+			src="./widget.js?id=app_svelte_widget"
+		></script>
 	</head>
 	<body></body>
 </html>
