--- a/src/_static/app.html
+++ b/src/_static/app.html
@@ -3,18 +3,21 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Boilerplate Svelte using Vite for development" />
+		<meta name="description" content="Boilerplate Svelte">
 		<meta name="theme-color" content="#878787">
-		<title>Boilerplate Svelte using Vite for development</title>
+		<title>Boilerplate Svelte</title>
 		<link rel="icon" href="favicon/favicon.ico" type="image/x-icon" sizes="any">
 		<link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
 		<link rel="manifest" href="manifest.json">
-		<link rel="preconnect" href="https://unpkg.com" crossorigin>
+		<link rel="dns-prefetch" href="https://unpkg.com/">
 		<script
 			type="module"
-			id="app_svelte_widget"
-			src="./widget.js?id=app_svelte_widget"
+			src="./widget.js?id=boilerplate_svelte_js"
+			id="boilerplate_svelte_js"
+			data-target="boilerplate_svelte_div"
 		></script>
 	</head>
-	<body></body>
+	<body>
+		<div id="boilerplate_svelte_div"></div>
+	</body>
 </html>
