update packs and create entry.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<script
 			type="module"
 			id="boilerplate_svelte_js"
-			src="/src/main.js?TARGET_JS=boilerplate_svelte_js"
+			src="/src/entry.js?TARGET_JS=boilerplate_svelte_js"
 		></script>
 	</head>
 	<body></body>
