add html template

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR" dir="ltr">
 	<head>
+		<!-- <base href="{%= base %}"> -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Boilerplate Svelte">
+		<meta name="description" content="{%= description %}">
 		<meta name="theme-color" content="#878787">
-		<title>Boilerplate Svelte</title>
+		<title>{%= title %}</title>
 		<link rel="icon" href="favicon/favicon.ico" type="image/x-icon" sizes="any">
 		<link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
 		<link rel="manifest" href="manifest.json">
-		<link rel="dns-prefetch" href="https://unpkg.com/">
 		<script
 			type="module"
-			id="boilerplate_svelte_js"
-			src="/src/entry.js?TARGET_JS=boilerplate_svelte_js"
+			id="{%= target_js %}"
+			src="/src/entry.js?TARGET_JS={%= target_js %}"
 		></script>
 	</head>
 	<body></body>
