--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="{%= description %}">
 		<meta name="theme-color" content="#878787">
 		<title>{%= title %}</title>
-		<link rel="icon" href="favicon/favicon.ico" type="image/x-icon" sizes="any">
+		<link rel="icon" href="favicon/favicon.png" type="image/png" sizes="any">
 		<link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
 		<link rel="manifest" href="manifest.json">
 		<script
