--- a/src/_static/app.html
+++ b/src/_static/app.html
@@ -1,15 +1,42 @@
-<!DOCTYPE html>
-<html lang="pt-BR" dir="ltr">
+<!doctype html>
+<html
+	lang="pt-BR"
+	dir="ltr"
+>
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Boilerplate Svelte">
-		<meta name="theme-color" content="#878787">
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1"
+		/>
+		<meta
+			name="description"
+			content="Boilerplate Svelte"
+		/>
+		<meta
+			name="theme-color"
+			content="#878787"
+		/>
 		<title>Boilerplate Svelte</title>
-		<link rel="icon" href="favicon/favicon.ico" type="image/x-icon" sizes="any">
-		<link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
-		<link rel="manifest" href="manifest.json">
-		<link rel="dns-prefetch" href="https://unpkg.com/">
+		<link
+			rel="icon"
+			href="favicon/favicon.ico"
+			type="image/x-icon"
+			sizes="any"
+		/>
+		<link
+			rel="icon"
+			href="favicon/favicon.svg"
+			type="image/svg+xml"
+		/>
+		<link
+			rel="manifest"
+			href="manifest.json"
+		/>
+		<link
+			rel="dns-prefetch"
+			href="https://unpkg.com/"
+		/>
 		<script
 			type="module"
 			src="./widget.js?id=boilerplate_svelte_js"
